# DeepLearning-for-audio-course-by-Valerio-Velardo

./: 11- Preprocessing audio data for Deep Learning.ipynb  12- Music genre classification  Preparing the dataset.ipynb  13- Implementing a neural network for music genre classification.ipynb  14- SOLVING OVERFITTING in neural networks.ipynb  16- How to Implement a CNN for Music Genre Classification.ipynb  19- How to Implement an RNN-LSTM Network for Music Genre Classification.ipynb  3- Implementing an artificial neuron from scratch.ipynb  6- Implementing a neural network from scratch in Python.ipynb  8- TRAINING A NEURAL NETWORK  Implementing backpropagation and gradient descent from scratch.ipynb  9- How to implement a (simple) neural network with TensorFlow 2.ipynb  README.md  pyproject.toml  requirement.txt
deeplearning4audio/: 11- Preprocessing audio data for Deep Learning.ipynb  12- Music genre classification  Preparing the dataset.ipynb  16- How to Implement a CNN for Music Genre Classification.ipynb  19- How to Implement an RNN-LSTM Network for Music Genre Classification.ipynb  3- Implementing an artificial neuron from scratch.ipynb  6- Implementing a neural network from scratch in Python.ipynb  8- TRAINING A NEURAL NETWORK  Implementing backpropagation and gradient descent from scratch.ipynb  9- How to implement a (simple) neural network with TensorFlow 2.ipynb
