[tool.poetry]
name = "deeplearning4audio"
version = "0.1.0"
description = "V. Velardo course DL4Audio"
authors = ["NemeWolf <nehemiasman_8@live.com>"]
readme = "README.md"
packages = [{include="deeplearning4audio"}]

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.17.0"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
librosa = "^0.10.2.post1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
